Issue #24: Fixed jumping 'waiting' play button.

--- a/src/assets/track-blocks/track-player.scss
+++ b/src/assets/track-blocks/track-player.scss
@@ -27,7 +27,7 @@
   }
   .track-control-play {
     .spinner-border {
-      $spinner-size: 1rem;
+      $spinner-size: 1.75rem;
       --bs-spinner-width: #{$spinner-size};
       --bs-spinner-height: #{$spinner-size};
       // --bs-spinner-border-width: 0.2em;
